[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/ui/shop_menu.gd" id="1"]

[node name="ShopMenu" type="Control"]
visible = false
script = ExtResource("1")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.9
anchor_bottom = 0.9

[node name="HBoxContainer" type="HBoxContainer" parent="Panel"]
layout_mode = 1
anchor_left = 0.05
anchor_top = 0.05
anchor_right = 0.95
anchor_bottom = 0.8

[node name="Goods" type="ItemList" parent="Panel/HBoxContainer"]
size_flags_horizontal = 3

[node name="Description" type="RichTextLabel" parent="Panel/HBoxContainer"]
size_flags_horizontal = 3
text = "Bem-vindo à loja"

[node name="Credits" type="Label" parent="Panel/HBoxContainer"]
text = "Créditos: 0"

[node name="Buttons" type="HBoxContainer" parent="Panel"]
layout_mode = 1
anchor_left = 0.3
anchor_top = 0.82
anchor_right = 0.7
anchor_bottom = 0.92

[node name="Buy" type="Button" parent="Panel/Buttons"]
text = "Comprar"

[node name="Close" type="Button" parent="Panel/Buttons"]
text = "Fechar"

[connection signal="item_selected" from="Panel/HBoxContainer/Goods" to="." method="_on_Goods_item_selected"]
[connection signal="pressed" from="Panel/Buttons/Buy" to="." method="_on_buy_pressed"]
[connection signal="pressed" from="Panel/Buttons/Close" to="." method="close"]
